adding secret creation for clients

--- a/ansible/roles/keycloak/templates/realm-export.json.j2
+++ b/ansible/roles/keycloak/templates/realm-export.json.j2
@@ -904,7 +904,7 @@
       "enabled": true,
       "alwaysDisplayInConsole": false,
       "clientAuthenticatorType": "client-secret",
-      "secret": "**********",
+      "secret": "{{ tpa_walker_secret }}",
       "redirectUris": [
         "*"
       ],
