--- a/ansible/roles/tpa/templates/secrets.yml.j2
+++ b/ansible/roles/tpa/templates/secrets.yml.j2
@@ -1,11 +1,3 @@
-#---
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: kafka-credentials
-# type: Opaque
-# data:
-#   client_password: PASSWORD
 ---
 apiVersion: v1
 kind: Secret
@@ -46,4 +38,4 @@ metadata:
   name: oidc-walker
 type: Opaque
 stringData:
-  client-secret: Q63OoMtjlc1alGzfcAP7ktgUzFbQFFmE
+  client-secret: {{ tpa_walker_secret }}
