adding backstage and user creation

--- a/ansible/roles/keycloak/templates/tas-realm-export.json.j2
+++ b/ansible/roles/keycloak/templates/tas-realm-export.json.j2
@@ -1,6 +1,6 @@
 {
   "id": "71a2e3c8-49ee-4821-a43c-f396a3bc43dd",
-  "realm": "trusted-artifact-signer",
+  "realm": "{{ keycloak_tas_realm_name }}",
   "notBefore": 0,
   "defaultSignatureAlgorithm": "RS256",
   "revokeRefreshToken": false,
