--- a/ansible/roles/devhub/templates/backstage.yml.j2
+++ b/ansible/roles/devhub/templates/backstage.yml.j2
@@ -4,6 +4,7 @@ metadata:
   name: developer-hub
 spec:
   application:
+    dynamicPluginsConfigMapName: dynamic-plugins-rhdh
     appConfig:
       mountPath: /opt/app-root/src      
       configMaps:
