--- a/ansible/roles/devhub/templates/secrets-rhdh.yml.j2
+++ b/ansible/roles/devhub/templates/secrets-rhdh.yml.j2
@@ -10,3 +10,4 @@ stringData:
   KEYCLOAK_CLIENT_ID: {{ rhdh_keycloak_client_id }}
   KEYCLOAK_CLIENT_SECRET: {{ rhdh_keycloak_client_secret }}
   SESSION_SECRET: topSecretSecret
+  NODE_TLS_REJECT_UNAUTHORIZED: "0"
