--- a/ansible/roles/argocd/templates/argo-project.yml.j2
+++ b/ansible/roles/argocd/templates/argo-project.yml.j2
@@ -11,3 +11,6 @@ spec:
       server: '*'
   sourceRepos:
     - '*'
+  sourceNamespaces:
+    - '{{ gitops_project }}'
+    - '{{ gitops_project }}-*'     
