adding more storage to minio and db

--- a/ansible/roles/minio/templates/minio-stateful.yml.j2
+++ b/ansible/roles/minio/templates/minio-stateful.yml.j2
@@ -9,7 +9,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: '{{ minio_storage_size }}'
   volumeMode: Filesystem
 ---
 apiVersion: apps/v1
