--- a/ansible/roles/streams/templates/user.yml.j2
+++ b/ansible/roles/streams/templates/user.yml.j2
@@ -1,7 +1,7 @@
 apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaUser
 metadata:
-  name: tester
+  name: "{{ kafka_user_name }}"
   labels:
     strimzi.io/cluster: "{{ kafka_cluster_name }}"
 spec:
