--- a/ansible/roles/keycloak/templates/user-template.json.j2
+++ b/ansible/roles/keycloak/templates/user-template.json.j2
@@ -1,7 +1,7 @@
 {
   "username": "{{ keycloak_user_username }}",
-  "firstName": "{{ keycloak_user_username }}",
-  "lastName": "Test",
+  "firstName": "Admin",
+  "lastName": "Tester",
   "email": "{{ keycloak_user_username }}@demo.com",
   "emailVerified": "true",
   "enabled": "true",
