--- a/ansible/roles/tas/templates/securesign.yml.j2
+++ b/ansible/roles/tas/templates/securesign.yml.j2
@@ -40,3 +40,25 @@ spec:
       - name: rekor.pub
       - name: ctfe.pub
       - name: fulcio_v1.crt.pem
+
+  tsa:
+    externalAccess:
+      enabled: true
+    monitoring:
+      enabled: true
+    ntpMonitoring:
+      enabled: true
+    signer:
+      certificateChain:
+        intermediateCA:
+          - commonName: tsa.hostname
+            organizationEmail: jdoe@redhat.com
+            organizationName: Red Hat
+        leafCA:
+          commonName: tsa.hostname
+          organizationEmail: jdoe@redhat.com
+          organizationName: Red Hat
+        rootCA:
+          commonName: tsa.hostname
+          organizationEmail: jdoe@redhat.com
+          organizationName: Red Hat
