--- a/ansible/roles/tas/templates/securesign.yml.j2
+++ b/ansible/roles/tas/templates/securesign.yml.j2
@@ -9,7 +9,11 @@ metadata:
     app.kubernetes.io/part-of: trusted-artifact-signer
   name: securesign-sample
 spec:
-  ctlog: null
+  ctlog: 
+    monitoring:
+      enabled: true
+    trillian:
+      port: 8091
   fulcio:
     certificate:
       commonName: fulcio.hostname
