Update securesign.yml.j2 to inlude tsa.certchain.pem secret

--- a/ansible/roles/tas/templates/securesign.yml.j2
+++ b/ansible/roles/tas/templates/securesign.yml.j2
@@ -43,7 +43,8 @@ spec:
     keys:
       - name: rekor.pub
       - name: ctfe.pub
-      - name: fulcio_v1.crt.pem
+      - name: fulcio_v1.crt.pem   
+      - name: tsa.certchain.pem
   tsa:
     externalAccess:
       enabled: true
