separating tas and tpa realm

--- a/ansible/roles/tpa/templates/secrets.yml.j2
+++ b/ansible/roles/tpa/templates/secrets.yml.j2
@@ -35,7 +35,7 @@ stringData:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: oidc-walker
+  name: oidc-cli
 type: Opaque
 stringData:
-  client-secret: {{ tpa_walker_secret }}
+  client-secret: {{ tpa_cli_secret }}
