--- a/ansible/roles/tpa/templates/secrets.yml.j2
+++ b/ansible/roles/tpa/templates/secrets.yml.j2
@@ -5,8 +5,8 @@ metadata:
   name: s3-credentials
 type: Opaque
 stringData:
-  user: {{ minio_key }}
-  password:  {{ minio_secret }}
+  user: {{ aws_ec2_access_key }}
+  password:  {{ aws_ec2_secret_key }}
 ---
 apiVersion: v1
 kind: Secret
