isolating configs and updating tas

--- a/ansible/roles/keycloak/templates/tas-realm.yml.j2
+++ b/ansible/roles/keycloak/templates/tas-realm.yml.j2
@@ -8,7 +8,7 @@ spec:
   keycloakCRName: keycloak
   realm:
     id: 71a2e3c8-49ee-4821-a43c-f396a3bc43dd
-    realm: "{{ keycloak_tas_realm_name }}"
+    realm: "trusted-artifact-signer"
     notBefore: 0
     defaultSignatureAlgorithm: RS256
     revokeRefreshToken: false
