--- a/ansible/roles/keycloak/templates/tpa-realm.yml.j2
+++ b/ansible/roles/keycloak/templates/tpa-realm.yml.j2
@@ -401,6 +401,8 @@ spec:
         disableableCredentialTypes: []
         requiredActions: []
         notBefore: 0
+        realmRoles:
+          - trust-admin
         access:
           manageGroupMembership: true
           view: true
